* fix me: codepress seems to be broken in chrome, it seems not to accept loading javascript files from iframes! Wait till the new stable version. For now, only FF4 is supported.

--- a/trunk/dev/iteration1/assets/css/m3d_style.css
+++ b/trunk/dev/iteration1/assets/css/m3d_style.css
@@ -165,12 +165,16 @@ max-height:100px;
 }
 
 #editor textarea {
-width: 530px;
-min-width: 530px;
-max-width: 530px;
-height: 494px;
-min-height: 494px;
-max-height: 494px;
+width: 560px;
+min-width: 560px;
+max-width: 560px;
+height: 498px;
+min-height: 498px;
+max-height: 498px;
+}
+
+#editor textarea:disabled {
+visibility:hidden;
 }
 
 #canvas-border {
